tests/NormalTests/paczka1/fuzzy1/91982100.err
Error in line 2: Mpg A285 55,3
Error in line 19: Mpg S664 40,9
Error in line 8: qhq A473 13,2
Error in line 21: qhq A285 76,5
Error in line 13: Mq2CZq A285 67,9
